--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,9 @@ author: "Kleefuchs" # Your username.
 main: dev.kleefuchs.globalkits.GlobalKitsPlugin # Replace "me.mfnalex" with the Group ID you chose, and adjust "helloworldplugin.HelloWorldPlugin" if you chose another plugin name.
 version: ${project.version} # Maven will automatically replace this with the version number defined in your pom.xml
 api-version: "1.13" # Optional, but you should add this when your plugin should run on ANY versions above 1.13
+
+commands:
+  loadkit:
+    description: Used to load a kit
+    usage: /loadkit <Kit-Creator-Name>/<Kit-Name>
+    permission: globalkits.loadkit
