--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 <groupId>dev.kleefuchs.globalkits</groupId>
 <artifactId>globalkits</artifactId>
-<version>1.0-SNAPSHOT</version>
+<version>0.1</version>
 
 <name>globalkits</name>
 <!-- FIXME change it to the project's website -->
